upcxx-2023.9.0/test/neg/neg-as_rpc5.errc
All rvalue as_rpc arguments must be CopyConstructible.
